# reddit-api

./: .gitignore  Cargo.toml  LICENSE  README.md  out.json
.github/workflows/: build.yml  tests.yml
src/: client.rs  functions.rs  http.rs  lib.rs  routes.rs  subreddit.rs
src/responses/: access_token.rs  create_reddit_post_response.rs  mod.rs  sub_reddit_new.rs
