[package]
name = "reddit-api"
version = "0.1.0"
edition = "2021"
authors = ["Proudmuslim <proudmuslim-dev@protonmail.com>", "Tricked <tricked@duck.com>"]
license = "MIT"
description = """
(WIP) A Reddit API client.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
